CSS fix for box-shadow on Safari iOS

--- a/mobile/css/shared/oae/partials/views.css
+++ b/mobile/css/shared/oae/partials/views.css
@@ -275,34 +275,34 @@
 }
 /* line 38, ../../../../sass/shared/oae/partials/views/login.scss */
 #login-view input, #login-view button {
-  border: none;
   width: 100%;
   height: 100%;
-  line-height: 100%;
+  border: none;
   -webkit-border-radius: 8px;
   border-radius: 8px;
 }
-/* line 46, ../../../../sass/shared/oae/partials/views/login.scss */
+/* line 45, ../../../../sass/shared/oae/partials/views/login.scss */
 #login-view .inputcontainer, #login-view .buttoncontainer {
   overflow: hidden;
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
-/* line 51, ../../../../sass/shared/oae/partials/views/login.scss */
+/* line 50, ../../../../sass/shared/oae/partials/views/login.scss */
 #login-view .inputcontainer {
   height: 40px;
   margin-bottom: 10px;
   background-color: #FFFFFF;
   border: 1px solid #cccccc;
 }
-/* line 57, ../../../../sass/shared/oae/partials/views/login.scss */
+/* line 56, ../../../../sass/shared/oae/partials/views/login.scss */
 #login-view .inputcontainer input {
   color: #777777;
-  background: none;
+  padding-top: 1px;
   padding-left: 20px;
   padding-right: 20px;
   box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
+  -webkit-appearance: none;
 }
 /* line 67, ../../../../sass/shared/oae/partials/views/login.scss */
 #login-view .buttoncontainer {
